tests/fail/elaboration/unexpected-parameter/fun-literal.snap
stdout = ''
stderr = '''
error: too many parameters in function literal
  ┌─ tests/fail/elaboration/unexpected-parameter/fun-literal.fathom:3:9
  │
3 │ fun A a b => a : fun (A : Type) -> A -> A
  │         ^
  │         │
  │         unexpected parameter
  │         expected type A
  │
  = expected type A

'''
